core/force-app/main/default/objects/Account/fields/atttendee_nomes__c.field-meta.xml
<CustomField>
    <fullName>atttendee_nomes__c</fullName>
    <label>atttendee nomes</label>
    <length>25</length>
    <type>Text</type>
</CustomField>