core/force-app/main/default/objects/Account/fields/Demo_Phone__c.field-meta.xml
<CustomField>
    <fullName>Demo_Phone__c</fullName>
    <label>Demo-Phone</label>
    <type>Phone</type>
</CustomField>