core/force-app/main/default/objects/Account/fields/Hemail__c.field-meta.xml
<CustomField>
    <fullName>Hemail__c</fullName>
    <label>Hemail?</label>
    <type>Email</type>
</CustomField>