core/force-app/main/default/objects/Account/fields/long_text__c.field-meta.xml
<CustomField>
    <fullName>long_text__c</fullName>
    <label>long text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>