core/force-app/main/default/objects/Account/fields/new_field__c.field-meta.xml
<CustomField>
    <fullName>new_field__c</fullName>
    <label>new field</label>
    <length>18</length>
    <type>Text</type>
</CustomField>