core/force-app/main/default/objects/Account/fields/New_pipeline_name__c.field-meta.xml
<CustomField>
    <fullName>New_pipeline_name__c</fullName>
    <description>A conflict will be caused by this change.</description>
    <label>New pipeline name</label>
    <length>28</length>
    <type>Text</type>
</CustomField>