core/force-app/main/default/objects/Account/fields/Sample_core_field__c.field-meta.xml
<CustomField>
    <fullName>Sample_core_field__c</fullName>
    <label>Sample core field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>