core/force-app/main/default/objects/Account/fields/SoW_Check__c.field-meta.xml
<CustomField>
    <fullName>SoW_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SoW Check</label>
    <type>Checkbox</type>
</CustomField>