core/force-app/main/default/objects/Account/fields/test_picklist__c.field-meta.xml
<CustomField>
    <fullName>test_picklist__c</fullName>
    <label>test picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>apple</fullName>
            </value>
            <value>
                <fullName>bapple</fullName>
            </value>
            <value>
                <fullName>capple</fullName>
            </value>
            <value>
                <fullName>dapple</fullName>
            </value>
            <value>
                <fullName>eapple</fullName>
            </value>
            <value>
                <fullName>fapple</fullName>
            </value>
            <value>
                <fullName>gapple</fullName>
            </value>
            <value>
                <fullName>happle</fullName>
            </value>
            <value>
                <fullName>iapple</fullName>
            </value>
            <value>
                <fullName>japple</fullName>
            </value>
            <value>
                <fullName>kapple</fullName>
            </value>
            <value>
                <fullName>lapple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>